--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" type="text/css" href="resources/styles.style.css">
 </head>
 <body>
-    
+    <h1>Danny is neat I guess...</h1>
 </body>
 </html>
