Most of CSS done for layout section.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
     <section class="popular" id="shop">
         <div class="wrapper">
             <h2>Popular Products</h2>
+            <div class="popular__titleunderlinesdiv">
+                <div class="popular__titleunderlinel"></div>
+                <div class="popular__titleunderlinec"></div>
+                <div class="popular__titleunderliner"></div>
+            </div>
             <nav class="popular__nav">
                 <a href="">New Arrivals</a>
                 <a href="">Best Seller</a>
@@ -312,7 +317,7 @@
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Tortoiseshell retro sunglasses</p>
-                        <p class="popular__price">$56.00<span class"regprice">$79.00</span></p>
+                        <p class="popular__price">$56.00<span class="regprice">$79.00</span></p>
                     </div>
                 </div>
                 <div class="popular__prodbox">
@@ -359,22 +364,25 @@
             </div>
             <p class="italic">Duis mollis, est non commando luctus, nisi erat liguia, eget lacinia adio sem nec elit.  Fusce dapibus, telius ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><span class="author">ROSINANTE BROOK . WEB DESIGN</span></p>
-            <!-- Could also use pseudo elements for these circles -->
-            <!-- <div class="quote__leftbox__popcircles"></div> 
-            <div class="quote__leftbox__popcircles"></div>
-            <div class="quote__leftbox__popcircles"></div>
-            <div class="quote__leftbox__popcircles"></div>             -->
+            <div class="quote__leftbox__popcirclediv">
+                <a href=""><div class="quote__leftbox__popcircles"></div></a>
+                <a href=""><div class="quote__leftbox__popcircles"></div></a>
+                <a href=""><div class="quote__leftbox__popcircles"></div></a>
+                <a href=""><div class="quote__leftbox__popcircles"></div></a>
+            </div>
         </div>
         <div class="quote__rightbox">
             <div class="quote__rightbox__mediabut">
                 <img src="resources/images/icon_play.png">
             </div>
-            <h1 class="font__pressstyle">PLANTS</h1>
-            <div class="quote__rightbox__planticondiv">
-                <img src="resources/images/icon_plantscomic.png">
+            <div class="quote__rightbox__txt">
+                <h1 class="font__pressstyle">PLANTS</h1>
+                <div class="quote__rightbox__planticondiv">
+                    <img src="resources/images/icon_plantscomic.png">
+                </div>
+                <h1 class="font__pressstyle">STORE</h1>
+                <h5>AMAZING SHOP THEMES</h5>
             </div>
-            <h1 class="font__pressstyle">STORE</h1>
-            <h5>AMAZING SHOP THEMES</h5>
         </div>
     </section>
 
