CSS done for blog section.

--- a/index.html
+++ b/index.html
@@ -389,34 +389,41 @@
     <section class="blog">
         <div class="wrapper">
             <h2>From Our Blog</h2>
-            <div class="blog__aritclebox">
-                <div class="blog__articlebox__imgdiv">
-                    <img src="resources/images/image_fishnets1.jpg">
-                </div>
-                <div class="blog__articlebox__text">
-                    <p>December 14, 2017</p>
-                    <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
-                    <a href="">Read More</a>
-                </div>
+            <div class="popular__titleunderlinesdiv">
+                <div class="popular__titleunderlinel"></div>
+                <div class="popular__titleunderlinec"></div>
+                <div class="popular__titleunderliner"></div>
             </div>
-            <div class="blog__aritclebox">
-                <div class="blog__articlebox__imgdiv">
-                    <img src="resources/images/image_fishnets2.jpg">
+            <div class="blog__articlebox__articlecont">
+                <div class="blog__articlebox">
+                    <div class="blog__articlebox__imgdiv">
+                        <img src="resources/images/image_fishnets1.jpg">
+                    </div>
+                    <div class="blog__articlebox__text">
+                        <p>December 14, 2017</p>
+                        <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
+                        <a href="">Read More</a>
+                    </div>
                 </div>
-                <div class="blog__articlebox__text">
-                    <p>December 14, 2017</p>
-                    <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
-                    <a href="">Read More</a>
+                <div class="blog__articlebox">
+                    <div class="blog__articlebox__imgdiv">
+                        <img src="resources/images/image_fishnets2.jpg">
+                    </div>
+                    <div class="blog__articlebox__text">
+                        <p>December 14, 2017</p>
+                        <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
+                        <a href="">Read More</a>
+                    </div>
                 </div>
-            </div>
-            <div class="blog__aritclebox">
-                <div class="blog__articlebox__imgdiv">
-                    <img src="resources/images/image_fishnets3.jpg">
-                </div>
-                <div class="blog__articlebox__text">
-                    <p>December 14, 2017</p>
-                    <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
-                    <a href="">Read More</a>
+                <div class="blog__articlebox">
+                    <div class="blog__articlebox__imgdiv">
+                        <img src="resources/images/image_fishnets3.jpg">
+                    </div>
+                    <div class="blog__articlebox__text">
+                        <p>December 14, 2017</p>
+                        <p class="bold">How To Wear Fishnets Like a Street Style Superstar</p>
+                        <a href="">Read More</a>
+                    </div>
                 </div>
             </div>
         </div>
