Complete CSS for signup section.

--- a/index.html
+++ b/index.html
@@ -432,35 +432,43 @@
     <section class="signup">
         <div class="wrapper">
             <h2>Sign Up For Newsletter</h2>
+                <div class="popular__titleunderlinesdiv">
+                    <div class="popular__titleunderlinel"></div>
+                    <div class="popular__titleunderlinec"></div>
+                    <div class="popular__titleunderliner"></div>
+                </div>
             <p>Cras justo odio, dapibus ac facilisis in, egestras eget quam. Aenean eu leo quam.  Pellentesque amare sem lacinia quam venenatis vstibulum.</p>
             <div class="signup__emailbox">
                 <form action="">
-                    Enter your email
-                    <input type="text" name="firstname" value="Mickey">
+                    <p>Enter your email</p>
+                    <input type="text" name="firstname" value="">
                     <button>
-                        <img src="resources/images/icon_mail.png" alt="enveloppe icon">
+                        <!-- <img src="resources/images/icon_mail.png" alt="enveloppe icon"> -->
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     </button>
                 </form>                    
             </div>
-            <div class="signup__locationimgdiv">
-                    <img src="resources/images/image_loc1.png">
-                <img src="">
-            </div>
-            <div class="signup__locationimgdiv">
-                    <img src="resources/images/image_loc2.png">
-                <img src="">
-            </div>
-            <div class="signup__locationimgdiv">
-                    <img src="resources/images/image_loc3.png">
-                <img src="">
-            </div>
-            <div class="signup__locationimgdiv">
-                    <img src="resources/images/image_loc4.png">
-                <img src="">
-            </div>
-            <div class="signup__locationimgdiv">
-                    <img src="resources/images/image_loc5.png">
-                <img src="">
+            <div class="signup__locationimgscont">
+                <div class="signup__locationimgdiv">
+                        <img src="resources/images/image_loc1.png">
+                    <img src="">
+                </div>
+                <div class="signup__locationimgdiv">
+                        <img src="resources/images/image_loc2.png">
+                    <img src="">
+                </div>
+                <div class="signup__locationimgdiv">
+                        <img src="resources/images/image_loc3.png">
+                    <img src="">
+                </div>
+                <div class="signup__locationimgdiv">
+                        <img src="resources/images/image_loc4.png">
+                    <img src="">
+                </div>
+                <div class="signup__locationimgdiv">
+                        <img src="resources/images/image_loc5.png">
+                    <img src="">
+                </div>
             </div>
         </div>
     </section>
