Complete CSS for footer.

--- a/index.html
+++ b/index.html
@@ -638,11 +638,13 @@
         
 
     <footer>
-        <div class="footer__left">
-            <p>&copy; OVER . All Rights Reserved . Design by Creativewithjoy</p>
-        </div>
-        <div class="divfooter__right">
-            <p>Any question? Let us help you.  Call us: + (1200) 989 169 092</p>
+        <div class="wrapper">
+            <div class="footer__left">
+                <p>&copy; OVER . All Rights Reserved . Design by <span class="footer__dark">Creativewithjoy</span></p>
+            </div>
+            <div class="footer__right">
+                <p>Any question? Let us help you.  Call us: <span class="footer__dark">+ (1200) 989 169 092</span></p>
+            </div>
         </div>
     </footer>
 
