--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <body>
 
     <header>
-        <ul class="header__leftnav">
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">PAGES</a></li>
-            <li><a href="">SHOP</a></li>
-            <li><a href="">BLOG</a></li>
-        </ul>
+        <nav class="header__leftnav">
+            <a href="#home">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#pages">PAGES</a>
+            <a href="#shop">SHOP</a>
+            <a href="#blog">BLOG</a>
+        </nav>
         <div class="logoimgdiv">
             <?xml version="1.0" encoding="utf-8"?>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120px" height="28px" viewBox="0 0 120 28">
@@ -47,29 +47,26 @@
                 </g>
             </svg>
         </div>
-        <ul class="header__rightnav">
-            <li>
-                <a href="">
-                    <div="header__rightnav__bagicondiv">
-                        <?xml version="1.0" encoding="utf-8"?>
-                        <svg class="header__rightnav__bagicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" height="24px" viewBox="0 0 18 24">
-                            <g>
-                                <path d="M 1.5 24C 1.5 24 16.5 24 16.5 24 17.33 24 18 23.33 18 22.5 18 22.5 18 6 18 6 18 5.17 17.33 4.5 16.5 4.5 16.5 4.5 13.49 4.5 13.49 4.5 13.46 2.01 11.46-0 9-0 6.54-0 4.54 2.01 4.51 4.5 4.51 4.5 1.5 4.5 1.5 4.5 0.67 4.5-0 5.17-0 6-0 6-0 22.5-0 22.5-0 23.33 0.67 24 1.5 24ZM 16.5 6C 16.5 6 16.5 22.5 16.5 22.5 16.5 22.5 1.5 22.5 1.5 22.5 1.5 22.5 1.5 6 1.5 6 1.5 6 16.5 6 16.5 6ZM 9 1.5C 10.63 1.5 11.96 2.84 11.99 4.5 11.99 4.5 6.01 4.5 6.01 4.5 6.04 2.84 7.37 1.5 9 1.5ZM 6.75 9C 6.75 9 11.25 9 11.25 9 11.66 9 12 8.66 12 8.25 12 7.84 11.66 7.5 11.25 7.5 11.25 7.5 6.75 7.5 6.75 7.5 6.34 7.5 6 7.84 6 8.25 6 8.66 6.34 9 6.75 9Z" />
-                            </g>
-                        </svg>
-                    </div>
-                </a>
-            </li>
-            <li>
+        <nav class="header__rightnav">
+            <div class="header__notecircle">
+                <p>2</p>
+            </div>
+            <a href="">
+                <div="header__rightnav__bagicondiv">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg class="header__rightnav__bagicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" height="24px" viewBox="0 0 18 24">
+                        <g>
+                            <path d="M 1.5 24C 1.5 24 16.5 24 16.5 24 17.33 24 18 23.33 18 22.5 18 22.5 18 6 18 6 18 5.17 17.33 4.5 16.5 4.5 16.5 4.5 13.49 4.5 13.49 4.5 13.46 2.01 11.46-0 9-0 6.54-0 4.54 2.01 4.51 4.5 4.51 4.5 1.5 4.5 1.5 4.5 0.67 4.5-0 5.17-0 6-0 6-0 22.5-0 22.5-0 23.33 0.67 24 1.5 24ZM 16.5 6C 16.5 6 16.5 22.5 16.5 22.5 16.5 22.5 1.5 22.5 1.5 22.5 1.5 22.5 1.5 6 1.5 6 1.5 6 16.5 6 16.5 6ZM 9 1.5C 10.63 1.5 11.96 2.84 11.99 4.5 11.99 4.5 6.01 4.5 6.01 4.5 6.04 2.84 7.37 1.5 9 1.5ZM 6.75 9C 6.75 9 11.25 9 11.25 9 11.66 9 12 8.66 12 8.25 12 7.84 11.66 7.5 11.25 7.5 11.25 7.5 6.75 7.5 6.75 7.5 6.34 7.5 6 7.84 6 8.25 6 8.66 6.34 9 6.75 9Z" />
+                        </g>
+                    </svg>
+                </div>
+            </a>
                 <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
-            </li>
-            <li>
                 <a href=""><i class="fa fa-bars" aria-hidden="true"></i></a>
-            </li>
-        </ul>
+        </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="hero__navbutleftdiv">
             <a href="hero__navbutleft">
                 <?xml version="1.0" encoding="utf-8"?>
@@ -115,7 +112,7 @@
         </div>
     </section>
 
-    <section class="welcome">
+    <section class="welcome" id="about">
         <div class="wrapper">
             <h4>Welcome to</h4>
             <div class="welcome__plantimgdiv">
@@ -127,7 +124,7 @@
         </div>
     </section>
 
-    <section class="categories">
+    <section class="categories" id="pages">
         <div class="wrapper">
             <div class="categories__airpltdiv">
                 <img src="resources/images/image_airplants.jpg" alt="image of a spiky plant">
@@ -182,160 +179,151 @@
                 <a href="">Features</a>
             </nav>
             <div class="popular__prodboxcont">
+
                 <div class="popular__prodbox">
+                    <div class="popular__hotbut">
+                        <p>HOT</p>
+                    </div>
+                    <div class="popular__newbut popular__butlvl2">
+                        <p>NEW</p>
+                    </div>
                     <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
                         <img src="resources/images/image_pop1.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Pebbled backpack</p>
                         <p class="popular__price">$99.00</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
-                    </div>
                 </div>
+
                 <div class="popular__prodbox">
-                    <div class="popular__prodimgdiv">
-                        <img src="resources/images/image_pop2.jpg">
+                    <div class="popular__newbut">
+                        <p>NEW</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
+                    <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>                   
+                        <img src="resources/images/image_pop2.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
                         <p class="popular__price">$52.00</p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
-                    <div class="popular__prodimgdiv">
-                        <img src="resources/images/image_pop3.jpg">
+                    <div class="popular__twentyoffbut">
+                        <p>-20%</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
+                    <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
+                        <img src="resources/images/image_pop3.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Printed cotton t-shirt</p>
                         <p class="popular__price">$56.00 <span class="regprice">$79.00</span></p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
                     <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
                         <img src="resources/images/image_pop4.jpg">
-                    </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit cotton T-shirt</p>
                         <p class="popular__price">$77.00</p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
-                    <div class="popular__prodimgdiv">
-                        <img src="resources/images/image_pop5.jpg">
+                    <div class="popular__twentyoffbut">
+                        <p>-20%</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
+                    <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
+                        <img src="resources/images/image_pop5.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Zip leather jacket</p>
                         <p class="popular__price">$178.00<span class="regprice">$199.00</span></p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
                     <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
                         <img src="resources/images/image_pop6.jpg">
-                    </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
                         <p class="popular__price">$98.00</p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
-                    <div class="popular__prodimgdiv">
-                        <img src="resources/images/image_pop7.jpg">
+                    <div class="popular__hotbut">
+                        <p>HOT</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
+                    <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
+                        <img src="resources/images/image_pop7.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Combined weekend bag</p>
                         <p class="popular__price">$88.00</p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
-                    <div class="popular__prodimgdiv">
-                        <img src="resources/images/image_pop8.jpg">
+                    <div class="popular__twentyoffbut">
+                        <p>-20%</p>
                     </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
+                    <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
+                        <img src="resources/images/image_pop8.jpg">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Tortoiseshell retro sunglasses</p>
                         <p class="popular__price">$56.00<span class="regprice">$79.00</span></p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
                     <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
                         <img src="resources/images/image_pop9.jpg">
-                    </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit Patrick jeans</p>
                         <p class="popular__price">$88.00</p>
                     </div>
                 </div>
+
                 <div class="popular__prodbox">
                     <div class="popular__prodimgdiv">
+                        <div class="popular__prodimgdiv-hover">
+                            <a href="">ADD TO CART</a>
+                        </div>
                         <img src="resources/images/image_pop10.jpg">
-                    </div>
-                    <div class="popular__prodimgdiv-hover">
-                        <a href="">
-                            <div class="popular__prodimgdiv-hover-link">
-                                <p>ADD TO CART</p>
-                            </div>
-                        </a>
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Embroidered message cap</p>
@@ -376,7 +364,7 @@
         </div>
     </section>
 
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="wrapper">
             <h2>From Our Blog</h2>
             <div class="popular__titleunderlinesdiv">
@@ -482,11 +470,11 @@
                     <p><span class="bold">Email </span> : creativewithjoy@gmail.com</p>
                     <p><span class="bold">Skype </span> : doodlelys</p>
                     <div class="contact__smedbox">
-                        <i class='fa fa-facebook' aria-hidden='true'></i>
-                        <i class='fa fa-twitter' aria-hidden='true'></i>
-                        <i class='fa fa-google-plus' aria-hidden='true'></i>
-                        <i class='fa fa-instagram' aria-hidden='true'></i>
-                        <i class='fa fa-pinterest' aria-hidden='true'></i>
+                        <a href=""><i class='fa fa-facebook' aria-hidden='true'></i></a>
+                        <a href=""><i class='fa fa-twitter' aria-hidden='true'></i></a>
+                        <a href=""><i class='fa fa-google-plus' aria-hidden='true'></i></a>
+                        <a href=""><i class='fa fa-instagram' aria-hidden='true'></i></a>
+                        <a href=""><i class='fa fa-pinterest' aria-hidden='true'></i></a>
                     </div>
                 </div>
                 <div class="contact__lcbox">
