All responsive styling complete.

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </div>
         <div class="quote__rightbox">
             <div class="quote__rightbox__mediabut">
-                <img src="resources/images/icon_play.png">
+                <a href=""><img src="resources/images/icon_play.png"></a>
             </div>
             <div class="quote__rightbox__txt">
                 <h1 class="font__pressstyle">PLANTS</h1>
@@ -359,8 +359,8 @@
                     <img src="resources/images/icon_plantscomic.png">
                 </div>
                 <h1 class="font__pressstyle">STORE</h1>
-                <h5>AMAZING SHOP THEMES</h5>
             </div>
+            <h5>AMAZING SHOP THEMES</h5>
         </div>
     </section>
 
@@ -421,7 +421,6 @@
                     <p>Enter your email</p>
                     <input type="text" name="firstname" value="">
                     <button>
-                        <!-- <img src="resources/images/icon_mail.png" alt="enveloppe icon"> -->
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     </button>
                 </form>                    
@@ -429,23 +428,18 @@
             <div class="signup__locationimgscont">
                 <div class="signup__locationimgdiv">
                         <img src="resources/images/image_loc1.png">
-                    <img src="">
                 </div>
                 <div class="signup__locationimgdiv">
                         <img src="resources/images/image_loc2.png">
-                    <img src="">
                 </div>
                 <div class="signup__locationimgdiv">
                         <img src="resources/images/image_loc3.png">
-                    <img src="">
                 </div>
                 <div class="signup__locationimgdiv">
                         <img src="resources/images/image_loc4.png">
-                    <img src="">
                 </div>
                 <div class="signup__locationimgdiv">
                         <img src="resources/images/image_loc5.png">
-                    <img src="">
                 </div>
             </div>
         </div>
@@ -467,7 +461,7 @@
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.  Aenean eu leo quam.  Pellentesque ornare sern lacinia quam venenatis vestibulum.</p>
                     <p><span class="bold">Address </span>: 451 Fifth Avenue, 36th New York, NY, 1011829</p>
                     <p><span class="bold">Phone </span> : +(1200)445 441 221</p>
-                    <p><span class="bold">Email </span> : creativewithjoy@gmail.com</p>
+                    <p><span class="bold">Email </span> : <a href="" class="leftbox__email">creativewithjoy@gmail.com</a></p>
                     <p><span class="bold">Skype </span> : doodlelys</p>
                     <div class="contact__smedbox">
                         <a href=""><i class='fa fa-facebook' aria-hidden='true'></i></a>
@@ -501,22 +495,22 @@
                     <h3>Instagram</h3>
                     <div class="contact__rightbox__gallery">
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta1.jpg">
+                            <a href=""><img src="resources/images/image_insta1.jpg"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta2.jpg">
+                            <a href=""><img src="resources/images/image_insta2.jpg"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta3.jpg">
+                            <a href=""><img src="resources/images/image_insta3.jpg"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta4.jpg">
+                            <a href=""><img src="resources/images/image_insta4.jpg"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta5.jpg">
+                            <a href=""><img src="resources/images/image_insta5.jpg"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <img src="resources/images/image_insta6.jpg">
+                            <a href=""><img src="resources/images/image_insta6.jpg"></a>
                         </div>
                     </div>
                 </div>
