--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Pebbled backpack</p>
                         <p class="popular__price">$99.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>
                     </div>
                 </div>
 
@@ -212,6 +215,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
                         <p class="popular__price">$52.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>
                     </div>
                 </div>
 
@@ -228,6 +234,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Printed cotton t-shirt</p>
                         <p class="popular__price">$56.00 <span class="regprice">$79.00</span></p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -241,6 +250,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit cotton T-shirt</p>
                         <p class="popular__price">$77.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -257,6 +269,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Zip leather jacket</p>
                         <p class="popular__price">$178.00<span class="regprice">$199.00</span></p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -270,6 +285,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
                         <p class="popular__price">$98.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -286,6 +304,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Combined weekend bag</p>
                         <p class="popular__price">$88.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -302,6 +323,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Tortoiseshell retro sunglasses</p>
                         <p class="popular__price">$56.00<span class="regprice">$79.00</span></p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -315,6 +339,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit Patrick jeans</p>
                         <p class="popular__price">$88.00</p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
 
@@ -328,6 +355,9 @@
                     <div class="popular__prodpricing">
                         <p class="popular__description">Embroidered message cap</p>
                         <p class="popular__price">$178.00<span class="regprice">$199.00</span></p>
+                        <a href="">
+                            <i class='fa fa-cart-plus' aria-hidden='true'></i>
+                        </a>                        
                     </div>
                 </div>
             </div>
